chore: catch user already exists error
